--- a/src/templates/node.html
+++ b/src/templates/node.html
@@ -4,7 +4,7 @@
         margin-bottom: 10px;
     }
 
-    .st-nodes .st-node h4 {
+    .st-nodes .st-node h4.st-label {
         border: 1px solid #eee;
         border-left-width: 6px;
         padding: 10px;
@@ -51,7 +51,7 @@
 
 <div class="st-nodes">
     <div class="st-node" ng-class="{in: node.selected}" ng-repeat="node in $ctrl.nodes">
-        <h4 class="st-node-info" ng-class="{selected: node.selected}" ng-click="$ctrl.$selectNode(node)">
+        <h4 class="st-node-info st-label" ng-class="{selected: node.selected}" ng-click="$ctrl.$selectNode(node)">
             <i ng-if="node[$ctrl.nodeIcon]" class="{{ node[$ctrl.nodeIcon] }} st-node-icon"></i>
             {{ ::node[$ctrl.nodeLabel] }}
         </h4>
